@@ -1804,6 +1804,17 @@
       </component>
     </version>
   </module>
+  <module name="gtksourceview">
+    <version release="gnome-2.4">
+      <component name="gtksourceview" dir="gtksourceview" group="extras">
+	<podir dir="po"/>
+	<potname name="gtksourceview-1.0.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gtop">
     <version release="gnome-1.4">
       <component name="gtop" dir="gtop" group="core">
