@@ -1,3 +1,7 @@
+2003-05-17  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: Added gtksourceview.
+
 2003-05-16  Abel Cheung  <maddog@linux.org.hk>
 
 	* translation-status.xml: Fix pot name for gtkhtml HEAD. gtkhtml is
